--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -68,10 +68,11 @@
 
 		.st-Image {
 			width: 100%;
-			height: 100%;
+			height: 250px;
 			object-fit: cover;
 
 			&-fallback {
+				object-fit: cover;
 				border-left: none;
 				border-right: none;
 				font-size: 24px;
