--- a/src/Toasts.scss
+++ b/src/Toasts.scss
@@ -1,7 +1,7 @@
 .st-Toasts {
 	position: fixed;
-	top: 80px;
-	right: 8px;
+	bottom: 80px;
+	left: 8px;
 	margin-left: 8px;
 	z-index: 9999;
 	max-width: 400px;
