--- a/src/components/user/followers/Followers.scss
+++ b/src/components/user/followers/Followers.scss
@@ -44,7 +44,7 @@
 				}
 			}
 
-			span {
+			> span {
 				font-weight: bold;
 				font-family: $font-merriweather;
 				color: $color-grey-black;
