--- a/src/components/stories/StoryThumb.scss
+++ b/src/components/stories/StoryThumb.scss
@@ -10,7 +10,14 @@
 	min-width: $story-preview-width-small;
 	max-width: $story-preview-width-medium;
 	cursor: pointer;
-	flex: 1 1;
+	position: relative;
+	// flex: 1 1;
+
+	.st-StoryDropdownButton {
+		position: absolute;
+		top: 5px;
+		right: 5px;
+	}
 
 	&:hover {
 		text-decoration: none;
