--- a/src/components/stories/widgets/Categories.scss
+++ b/src/components/stories/widgets/Categories.scss
@@ -12,18 +12,20 @@
 		font-size: 14px;
 		color: $color-grey-light;
 		font-weight: 600;
+		padding-left: 16px;
 	}
 
 	.nav-link {
-		color: $color-grey-light;
+		color: $color-grey-medium;
 		font-weight: 600;
 		text-transform: uppercase;
 		cursor: pointer;
 		font-size: 14px;
-		padding-left: 0;
+		padding-left: 16px;
 
 		&:hover {
 			color: $color-secondary-black;
+			background-color: $color-white;
 		}
 
 		&.active {
