--- a/src/components/widgets/modals/Modal.scss
+++ b/src/components/widgets/modals/Modal.scss
@@ -16,6 +16,8 @@
 
 		&-content {
 			min-width: $story-preview-width-medium;
+			border-radius: 6px;
+			border: 1px solid $color-grey-border;
 
 			@media (max-width: $breakpoint-sm) {
 				min-width: $story-preview-width-small;
