--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -34,6 +34,7 @@ $color-secondary-yellow-dark: #c99f2c;
 $color-secondary-yellow-cream: #f6dd79;
 $color-secondary-yellow-light: #fcf3cf;
 
+$color-background: #fafaf9;
 $color-background-white-grey: #f6f5f4;
 $color-grey-border: #e9e6e2;
 $color-grey-lighter: #cdc7c1;
@@ -42,6 +43,8 @@ $color-grey-medium: #847b71;
 $color-grey-cream: #635c54;
 $color-grey-cream-dark: #433e37;
 $color-grey-black: #2f2922;
+
+$color-white: #fff;
 
 //FONTS
 
