--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -5,7 +5,7 @@
 	height: 60px;
 	padding: 0 !important;
 	margin: 24px 0;
-	background: #fff;
+	background: $color-background;
 	position: sticky !important;
 	z-index: 1;
 	top: 0;
@@ -53,8 +53,13 @@
 				color: $color-grey-light;
 				text-decoration: none;
 				font-weight: bold;
-				padding: 0;
+				padding: 8px 12px;
 				margin-right: 36px;
+				border-radius: 6px;
+
+				&:hover {
+					background-color: $color-white;
+				}
 
 				&.active {
 					color: $color-primary;
