--- a/src/components/stories/widgets/StoryPagePicker.scss
+++ b/src/components/stories/widgets/StoryPagePicker.scss
@@ -25,12 +25,13 @@
 	}
 
 	&__control {
-		border: none !important;
+		border: 1px solid $color-grey-border !important;
 		box-shadow: none !important;
 		flex-direction: row-reverse;
 		outline: none;
 		cursor: pointer !important;
-		background-color: $color-primary-light !important;
+		background-color: $color-background !important;
+		padding: 0 6px;
 
 		// &--menu-is-open {
 		// 	background-color: $color-primary-light !important;
@@ -45,11 +46,11 @@
 	}
 
 	&__single-value {
-		color: $color-primary-dark !important;
+		color: $color-grey-light !important;
 	}
 
 	&__indicator {
-		color: $color-primary-dark !important;
+		color: $color-grey-light !important;
 
 		&-separator {
 			display: none;
