--- a/src/components/stories/writter/StoryWritter.scss
+++ b/src/components/stories/writter/StoryWritter.scss
@@ -20,6 +20,11 @@
 				padding: 0;
 				font-family: $font-merriweather;
 				color: $color-grey-black;
+				background-color: $color-background;
+
+				&::placeholder {
+					font-size: 24px;
+				}
 			}
 		}
 
@@ -106,6 +111,8 @@
 
 	&-writter {
 		padding-bottom: 200px;
+		font-size: 18px;
+		line-height: 28px;
 
 		&-editor {
 			.st-TextEditor {
