--- a/src/components/user/followers/Followers.scss
+++ b/src/components/user/followers/Followers.scss
@@ -4,8 +4,14 @@
 	&-info {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		align-items: left;
 		cursor: pointer;
+		padding: 8px 12px;
+		border-radius: 6px;
+
+		&:hover {
+			background-color: $color-white;
+		}
 
 		span {
 			font-weight: bold;
