--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -9,17 +9,33 @@ $secondary: $color-primary-light;
 	&:focus {
 		border-color: $color-primary;
 	}
+
+	&::placeholder {
+		color: $color-grey-light;
+		font-size: 14px;
+	}
 }
 
 .btn {
 	font-weight: bold;
 
 	&-primary {
-		color: #fff;
+		color: $color-white;
 	}
 
 	&-secondary {
 		color: $color-primary-dark;
+
+		&:hover {
+			background-color: $color-white;
+			color: $color-primary-dark;
+			border: none;
+		}
+
+		&:focus {
+			background-color: $color-white;
+			color: $color-primary-dark;
+		}
 	}
 }
 
