--- a/src/components/widgets/button/DropdownButton.scss
+++ b/src/components/widgets/button/DropdownButton.scss
@@ -2,7 +2,7 @@
 
 .st-DropdownButton {
 	> button {
-		border: none;
+		border: 1px solid transparent;
 		outline: none !important;
 		box-shadow: none;
 		color: $color-grey-cream;
