--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -268,6 +268,10 @@
 					box-shadow: none !important;
 					border: none;
 					color: $color-primary;
+
+					&:hover {
+						border: none;
+					}
 				}
 			}
 		}
