--- a/src/components/login/Password.scss
+++ b/src/components/login/Password.scss
@@ -3,7 +3,7 @@
 .st-Password {
 	width: 480px;
 	padding: 20px;
-	margin: 40px 0;
+	margin: 40px auto;
 	display: flex;
 	flex-direction: column;
 }
