--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -47,6 +47,10 @@
 	&-feed {
 		justify-content: flex-start;
 
+		@media (max-width: $breakpoint-sm) {
+			flex-direction: column;
+		}
+
 		.nav-item {
 			.nav-link {
 				font-size: 16px;
@@ -56,6 +60,10 @@
 				padding: 8px 12px;
 				margin-right: 36px;
 				border-radius: 6px;
+
+				@media (max-width: $breakpoint-sm) {
+					margin-right: 0;
+				}
 
 				&:hover {
 					background-color: $color-white;
