--- a/src/components/stories/StoryThumb.scss
+++ b/src/components/stories/StoryThumb.scss
@@ -6,7 +6,7 @@
 	border: 1px solid $color-grey-border;
 	border-radius: 6px;
 	margin: 8px 0;
-	height: 144px;
+	height: 120px;
 	min-width: $story-preview-width-small;
 	max-width: $story-preview-width-medium;
 	cursor: pointer;
@@ -21,6 +21,8 @@
 
 	&:hover {
 		text-decoration: none;
+		box-shadow: $box-shadow-light;
+		transition: all .2s ease-in;
 	}
 
 	&-cover {
@@ -44,7 +46,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		padding: 12px;
+		padding: 16px;
 		height: 100%;
 		width: 100%;
 
