--- a/src/components/widgets/modals/Modal.scss
+++ b/src/components/widgets/modals/Modal.scss
@@ -43,6 +43,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: flex-end;
+			background: $color-background-white-grey;
 		}
 	}
 }
