--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
-body {
-	display: flex;
-	min-height: 100vh;
-	font-family: 'Lato', serif;
-	overflow-y: scroll;
-	background-color: #fafaf9;
-}
-
-#root {
-	min-height: 100vh;
-	max-width: 1366px;
-	width: 100%;
-	padding: 0 20px;
-	margin: 0 auto;
-}
+@import 'styles/bootstrap.scss';
+@import 'styles/fonts.scss';
+// @import 'styles/variables.scss';
+@import 'styles/typography.scss';
+@import 'styles/layout.scss';
