[UserProfile]: responsive fixed

--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -281,6 +281,7 @@
 					box-shadow: none !important;
 					border: none;
 					color: $color-primary;
+					min-width: 80px;
 
 					&:hover {
 						border: none;
