--- a/src/components/user/UserProfile.scss
+++ b/src/components/user/UserProfile.scss
@@ -14,6 +14,8 @@
 
 		@media (max-width: $breakpoint-sm) {
 			max-width: $story-preview-width-small;
+			flex-direction: column;
+			align-items: center;
 		}
 
 		.st-Loader {
@@ -28,6 +30,10 @@
 				display: flex;
 				flex-direction: column;
 				margin-bottom: 16px;
+
+				@media (max-width: $breakpoint-sm) {
+					align-items: center;
+				}
 
 				span {
 					font-family: $font-merriweather;
@@ -89,6 +95,10 @@
 				width: 120px;
 				height: 120px;
 				margin-right: 36px;
+
+				@media (max-width: $breakpoint-sm) {
+					margin-right: 0;
+				}
 			}
 		}
 	}
