--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -16,7 +16,7 @@
 
 	@media (max-width: $breakpoint-m) {
 		display: flex;
-		flex-direction: column;
+		// flex-direction: column;
 		padding: 0;
 		flex-wrap: nowrap !important;
 		height: auto;
@@ -26,7 +26,7 @@
 		flex: 1 1 0;
 
 		@media (max-width: $breakpoint-sm) {
-			order: 1;
+			display: none;
 		}
 	}
 
@@ -34,6 +34,10 @@
 		align-items: center;
 		flex-wrap: nowrap;
 		flex: 1 1 0;
+
+		@media (max-width: $breakpoint-sm) {
+			flex: unset;
+		}
 	}
 
 	&-status {
@@ -48,7 +52,8 @@
 		justify-content: flex-start;
 
 		@media (max-width: $breakpoint-sm) {
-			flex-direction: column;
+			flex-basis: 75% !important;
+			justify-content: space-between;
 		}
 
 		.nav-item {
@@ -63,6 +68,10 @@
 
 				@media (max-width: $breakpoint-sm) {
 					margin-right: 0;
+
+					span {
+						display: none;
+					}
 				}
 
 				&:hover {
@@ -78,6 +87,10 @@
 					&-compass {
 						font-size: 20px;
 						margin-right: 10px;
+
+						@media (max-width: $breakpoint-sm) {
+							margin-right: 0;
+						}
 					}
 				}
 			}
