--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -17,9 +17,14 @@
 	@media (max-width: $breakpoint-m) {
 		display: flex;
 		// flex-direction: column;
-		padding: 0;
+		padding: 5px 0;
 		flex-wrap: nowrap !important;
 		height: auto;
+	}
+
+	@media (max-width: $breakpoint-sm) {
+		max-width: $story-preview-width-small;
+		margin: 0 auto;
 	}
 
 	.st-StoryPicker {
@@ -52,7 +57,7 @@
 		justify-content: flex-start;
 
 		@media (max-width: $breakpoint-sm) {
-			flex-basis: 75% !important;
+			flex-basis: 70% !important;
 			justify-content: space-between;
 		}
 
@@ -68,6 +73,7 @@
 
 				@media (max-width: $breakpoint-sm) {
 					margin-right: 0;
+					padding: 0;
 
 					span {
 						display: none;
@@ -116,35 +122,16 @@
 			}
 		}
 
-		.dropdown {
-			&-toggle {
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				background: none !important;
-				border: none;
-
-				.st-Image,
-				.badge {
-					width: 40px;
-					height: 40px;
-					border-radius: 50%;
-					margin-right: 15px;
-					object-fit: cover;
-				}
-
-				.badge {
-					font-size: 20px;
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					text-transform: uppercase;
-				}
-			}
-
+		.st-DropdownButton {
 			> button {
 				padding: 5px;
 				border-radius: 50%;
+
+				@media (max-width: $breakpoint-sm) {
+					border: none;
+					padding: 0;
+					background-color: transparent;
+				}
 
 				&:focus {
 					box-shadow: none;
