--- a/src/components/stories/widgets/Categories.scss
+++ b/src/components/stories/widgets/Categories.scss
@@ -28,7 +28,7 @@
 		font-size: 14px;
 		padding-left: 16px;
 
-		@media (max-width: $breakpoint-sm) {
+		@media (max-width: $breakpoint-m) {
 			padding-left: 0;
 			padding-right: 16px;
 			width: max-content;
