changed share url logo and site description

--- a/src/components/login/Password.scss
+++ b/src/components/login/Password.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .st-Password {
-	width: 480px;
+	max-width: 480px;
 	padding: 20px;
 	margin: 40px auto;
 	display: flex;
