--- a/src/components/stories/Stories.scss
+++ b/src/components/stories/Stories.scss
@@ -1,6 +1,12 @@
 @import '../../styles/variables.scss';
 
 .st-Stories {
+	min-width: $story-preview-width-medium;
+
+	@media (max-width: $breakpoint-sm) {
+		min-width: $story-preview-width-small;
+	}
+
 	.st-Loader {
 		min-height: 400px;
 		min-width: $story-preview-width-medium;
