--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -24,6 +24,10 @@
 .heading-h2-black-bold {
 	@extend .merriweather-black-bold;
 	font-size: 24px;
+
+	@media (max-width: $breakpoint-sm) {
+		font-size: 18px;
+	}
 }
 
 .heading-h3-black-bold {
