[ProviderLogin]: added loader, [StoryThumb/StoryListItem]: title sliced

--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -6,6 +6,11 @@
 	justify-content: center;
 	backdrop-filter: blur(10px);
 
+	&-divider {
+		text-align: center;
+		color: $color-grey-medium;
+	}
+
 	.modal {
 		&-dialog {
 			max-width: unset;
