--- a/src/components/stories/StoryThumb.scss
+++ b/src/components/stories/StoryThumb.scss
@@ -59,7 +59,7 @@
 			flex-direction: column;
 			word-break: break-word;
 			max-height: 100px;
-			overflow: hidden;
+			// overflow: hidden;
 
 			> span {
 				color: $color-grey-medium;
