[Login]: Billboard height changed, [SignUp]: terms display inline

--- a/src/components/signup/SignUp.scss
+++ b/src/components/signup/SignUp.scss
@@ -13,8 +13,7 @@
 
 	&-terms {
 		display: flex;
-		align-items: center;
-		flex-direction: column;
+		justify-content: space-between;
 		margin: 12px 0;
 	}
 
