--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -38,6 +38,10 @@
 			padding: 0;
 			flex-grow: 1;
 
+			.st-Billboard {
+				height: auto;
+			}
+
 			form {
 				min-width: 320px;
 				flex-basis: 50%;
