--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import 'styles/bootstrap.scss';
 @import 'styles/fonts.scss';
 // @import 'styles/variables.scss';
+@import 'styles/scrollbar.scss';
 @import 'styles/typography.scss';
 @import 'styles/layout.scss';
