--- a/src/components/stories/SideBar.scss
+++ b/src/components/stories/SideBar.scss
@@ -4,6 +4,16 @@
 	display: flex;
 	flex-direction: column;
 
+	@media (max-width: $breakpoint-m) {
+		width: 100%;
+		max-width: $story-preview-width-medium;
+		margin: 0 auto;
+	}
+
+	@media (max-width: $breakpoint-sm) {
+		max-width: $story-preview-width-small;
+	}
+
 	&-tabs {
 		margin: 0 16px;
 
