[SideBar]: added margin top/bottom in responsive

--- a/src/components/stories/SideBar.scss
+++ b/src/components/stories/SideBar.scss
@@ -7,7 +7,7 @@
 	@media (max-width: $breakpoint-m) {
 		width: 100%;
 		max-width: $story-preview-width-medium;
-		margin: 0 auto;
+		margin: 12px auto;
 	}
 
 	@media (max-width: $breakpoint-sm) {
