--- a/src/components/stories/SideBar.scss
+++ b/src/components/stories/SideBar.scss
@@ -49,10 +49,7 @@
 		@media (max-width: $breakpoint-m) {
 			flex-direction: row;
 			overflow: auto;
-
-			> span {
-				display: none;
-			}
+			margin-top: 6px;
 		}
 	}
 }
