--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -69,6 +69,10 @@
 		.st-IconButton {
 			margin-right: 12px;
 
+			&-link {
+				margin-right: 16px;
+			}
+
 			&:last-child {
 				margin-right: 0;
 			}
