--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -1,18 +1,19 @@
-@import '../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-StoryItem {
 	width: $story-preview-width-medium;
 	min-height: $story-preview-height;
-	background: #fff;
 	margin: 12px 0 0;
 	border-radius: 6px;
-	border: 1px solid $color-background-white-grey;
+	// border: 1px solid $color-background-white-grey;
 	box-shadow: 2px 2px 12px rgba(35, 31, 26, 0.08);
 	display: flex;
 	flex-direction: column;
 	text-decoration: none !important;
-	color: #000 !important;
 	position: relative;
+	@include theme-aware('background', 'story-item-background');
+	@include theme-aware('color', 'story-item-description-color');
 
 	.st-DropdownButton {
 		position: absolute;
@@ -59,12 +60,12 @@
 			flex-direction: column;
 
 			span {
-				color: $color-grey-light;
+				@include theme-aware('color', 'story-item-created-color');
 
 				&:first-child {
 					font-weight: bold;
 					font-family: $font-merriweather;
-					color: $color-grey-black;
+					@include theme-aware('color', 'story-item-username-color');
 				}
 			}
 		}
@@ -107,17 +108,17 @@
 			flex-direction: column;
 
 			span {
-				color: $color-grey-black;
 				font-size: 18px;
 				font-family: $font-merriweather;
 				font-weight: bold;
 				line-height: 22px;
+				@include theme-aware('color', 'story-item-title-color');
 			}
 		}
 
 		&-categories {
 			span {
-				color: $color-grey-medium;
+				@include theme-aware('color', 'story-item-categories-color');
 				margin-right: 16px;
 				cursor: pointer;
 
@@ -169,8 +170,8 @@
 		&-stats {
 			display: flex;
 			justify-content: space-between;
-			color: $color-grey-medium;
 			cursor: pointer;
+			@include theme-aware('color', 'story-item-stats-color');
 			// margin: 8px 0;
 
 			span {
