--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,6 +18,10 @@ $color-primary-cream: #daba95;
 $color-primary-light: #faf5f0;
 
 $color-secondary-black: #231f1a;
+$color-secondary-black-cream: #34393d;
+$color-secondary-black-medium: #3a3e41;
+$color-secondary-black-light: #2e3336;
+$color-secondary-black-lighter: #3f4447;
 
 $color-secondary-green: #22d3bb;
 $color-secondary-green-dark: #11695e;
