--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -1,14 +1,15 @@
-@import '../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-Nav {
 	align-content: center;
 	height: 60px;
 	padding: 0 !important;
 	margin: 24px 0;
-	background: $color-background;
 	position: sticky !important;
 	z-index: 1;
 	top: 0;
+	@include theme-aware('background', 'color-background');
 
 	.st-Loader {
 		height: 100vh;
@@ -30,10 +31,10 @@
 		&:after {
 			content: '';
 			top: 0;
-			background: $color-background;
 			position: absolute;
 			width: 10px;
 			height: 100%;
+			@include theme-aware('background', 'color-background');
 		}
 
 		&:before {
@@ -111,11 +112,12 @@
 				> button {
 					padding: 0;
 					border-radius: 50%;
+					background-color: transparent;
+					border: none;
 
 					@media (max-width: $breakpoint-sm) {
 						border: none;
 						padding: 10px 0;
-						background-color: transparent;
 					}
 
 					&:focus {
@@ -158,7 +160,7 @@
 				}
 
 				&:hover {
-					background-color: $color-white;
+					@include theme-aware('background-color', 'sidebar-link-background-hover');
 				}
 
 				&.active {
