--- a/src/components/stories/StoryTabs.scss
+++ b/src/components/stories/StoryTabs.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import 'styles/mixins/tab-links.scss';
 
 .st-StoryTabs {
 	display: flex;
@@ -10,21 +11,7 @@
 		}
 
 		.nav-link {
-			color: $color-grey-light;
-			font-weight: 600;
-			cursor: pointer;
-			font-size: 14px;
-			padding: 0;
-			margin-right: 15px;
-
-			&:hover {
-				color: $color-secondary-black;
-			}
-
-			&.active {
-				color: $color-secondary-black;
-				border-bottom: 4px dotted $color-primary;
-			}
+			@include tab-link;
 		}
 
 		.st-SavedStories,
