--- a/src/components/stories/writter/StoryWritter.scss
+++ b/src/components/stories/writter/StoryWritter.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-StoryWritter {
 	display: flex;
@@ -19,8 +20,8 @@
 				box-shadow: none;
 				padding: 0;
 				font-family: $font-merriweather;
-				color: $color-grey-black;
-				background-color: $color-background;
+				@include theme-aware('color', 'writter-title-color');
+				@include theme-aware('background-color', 'writter-title-background');
 
 				&::placeholder {
 					font-size: 24px;
@@ -40,16 +41,16 @@
 
 		.st-DropdownButton {
 			.btn {
-				background-color: $color-background;
-				border-color: $color-grey-border;
 				color: $color-grey-light;
 				box-shadow: none;
+				@include theme-aware('background-color', 'story-pagepicker-background');
+				@include theme-aware('border-color', 'story-pagepicker-background');
 
 				&:hover,
 				&:active:not(:disabled):not(.disabled):active {
-					background-color: #fff;
+					@include theme-aware('background-color', 'story-pagepicker-background-hover');
+					@include theme-aware('border-color', 'story-pagepicker-background-hover');
 					color: $color-grey-light;
-					border-color: $color-grey-border;
 				}
 			}
 
@@ -87,22 +88,23 @@
 				}
 
 				.st-StoryPagePicker,
-				.st-IconButton, .st-DropdownButton {
+				.st-IconButton,
+				.st-DropdownButton {
 					margin-right: 16px;
 				}
 
 				.st-IconButton {
 					&-with-content {
-						background-color: $color-background;
-						border-color: $color-grey-border;
 						color: $color-grey-light;
 						box-shadow: none;
+						@include theme-aware('background-color', 'story-pagepicker-background');
+						@include theme-aware('border-color', 'story-pagepicker-background');
 
 						&:hover,
 						&:active {
-							background-color: #fff !important;
+							@include theme-aware('background-color', 'story-pagepicker-background-hover');
+							@include theme-aware('border-color', 'story-pagepicker-background-hover');
 							color: $color-grey-light !important;
-							border-color: $color-grey-border !important;
 						}
 					}
 				}
@@ -146,13 +148,8 @@
 		font-size: 18px;
 		line-height: 28px;
 
-		&-editor {
-			.st-TextEditor {
-				.public-DraftEditorPlaceholder-inner {
-					font-size: 16px;
-					color: $color-grey-lighter;
-				}
-			}
+		.st-TextEditor {
+			@include theme-aware('color', 'writter-title-color');
 		}
 	}
 }
