--- a/src/components/widgets/pickers/story/StoryPicker.scss
+++ b/src/components/widgets/pickers/story/StoryPicker.scss
@@ -1,4 +1,5 @@
 @import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-StoryPicker {
 	min-width: 400px;
@@ -44,6 +45,9 @@
 
 	.st-StoryPicker__control {
 		flex-direction: row-reverse;
+		@include theme-aware('background', 'story-item-background');
+		@include theme-aware('border-color', 'story-item-background');
+		cursor: initial;
 
 		&--menu-is-open, &--is-focused {
 			box-shadow: 0 0 0 1px $color-primary;
@@ -53,6 +57,10 @@
 		&:hover {
 			border-color: $color-primary;
 		}
+	}
+
+	.st-StoryPicker__input {
+		@include theme-aware('color', 'story-item-username-color');
 	}
 
 	.st-StoryPicker__indicators {
