--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 @import 'styles/bootstrap.scss';
 @import 'styles/fonts.scss';
-// @import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
+@import 'styles/themes/color-palette.scss';
+@import 'styles/mixins/tab-links.scss';
 @import 'styles/scrollbar.scss';
 @import 'styles/typography.scss';
 @import 'styles/layout.scss';
