--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -3,7 +3,7 @@ body {
 	min-height: 100vh;
 	font-family: $font-lato;
 	overflow-y: scroll;
-	background-color: $color-background;
+	@include theme-aware('background', 'body-background');
 }
 
 #root {
